# hyperion-editor

./: API.md  BUILDING_DLL.md  CMakeLists.txt  License.ThirdParty.txt  README.md  index.html  index.ts  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
example/cef/: .gitignore  CMakeLists.txt  crash_reporter.cfg  package.json  readme.md  tsconfig.json
example/cef/app/: app.cpp  app.hpp  binaryresourceprovider.cpp  binaryresourceprovider.hpp  client.cpp  client.hpp  config.hpp  logger.cpp  logger.hpp  main.cpp  resourceutil.cpp  resourceutil.hpp  webapp.hpp
example/cef/app/internal/: simpleipc.cpp  simpleipc.hpp
example/cef/shared/windows/: installer.nsi
example/cef/shared/windows/assets/: app.manifest  app.rc
example/cef/tools/: build.ts  clean.ts
example/cef/tools/utils/: buildtobin.ts  iconconvert.ts
example/cef/webapp/: package.json  tsconfig.app.json  vite.config.ts
example/cef/webapp/src/: App.tsx  index.css  index.tsx
example/cef/webapp/src/components/: TitleBar.tsx  navbar.tsx  statusbar.tsx
example/cef/webapp/src/components/data/: menu.ts
example/cef/webapp/src/pages/: welcome.tsx
example/web/: index.css  index.html
example/web/editor/: index.html
locales/: en.po  es.po  fr.po  th.po
src/: index.ts
src/core/: Cursor.ts  Document.ts  Editor.ts  index.ts
src/gui/: EditorView.ts  TextRenderer.ts  index.ts
src/gui/themes/: cutie.ts  default.ts  extradark.ts  index.ts  nekodark.ts  nekolight.ts  sunlight.ts  vanilla.ts
src/i18n/: po-parser.ts
src/ipc/: electronipc.ts
src/native/: HyperionCall.cpp
src/native/api/: AutoComplete.cpp  AutoComplete.hpp  CallTip.cpp  CallTip.hpp  ChangeHistory.cpp  ChangeHistory.hpp  Editor.cpp  Editor.hpp  HyperionBase.cpp  HyperionBase.hpp
src/native/core/: CellBuffer.cpp  CellBuffer.hpp  ContractionState.cpp  ContractionState.hpp  Document.cpp  Document.hpp  EditModel.cpp  EditModel.hpp  KeyMap.cpp  KeyMap.hpp  Partitioning.hpp  PerLine.cpp  PerLine.hpp  Range.hpp  RunStyles.cpp  RunStyles.hpp  Selection.cpp  Selection.hpp  SplitVector.hpp  UndoHistory.cpp  UndoHistory.hpp
src/native/include/: Hyp_Position.hpp  Hyperion.hpp  HyperionCall.hpp  HyperionExport.hpp  HyperionMessages.hpp  HyperionStructures.hpp  HyperionTypes.hpp  HyperionWidget.hpp  ILexer.hpp  ILoader.hpp  Sci_Position.hpp
src/native/platform/: Debugging.hpp  ElapsedPeriod.hpp  Geometry.cpp  Geometry.hpp  Platform.hpp  PlatformStubs.cpp  Position.hpp  SparseVector.hpp  XPM.cpp  XPM.hpp
src/native/syntax/: CaseConvert.cpp  CaseConvert.hpp  CaseFolder.cpp  CaseFolder.hpp  CharClassify.cpp  CharClassify.hpp  CharacterCategoryMap.cpp  CharacterCategoryMap.hpp  CharacterType.cpp  CharacterType.hpp  DBCS.cpp  DBCS.hpp  RESearch.cpp  RESearch.hpp  UniConversion.cpp  UniConversion.hpp  UniqueString.cpp  UniqueString.hpp
src/native/view/: Decoration.cpp  Decoration.hpp  EditView.cpp  EditView.hpp  Indicator.cpp  Indicator.hpp  LineMarker.cpp  LineMarker.hpp  MarginView.cpp  MarginView.hpp  PositionCache.cpp  PositionCache.hpp  Style.cpp  Style.hpp  ViewStyle.cpp  ViewStyle.hpp
src/test/: example.ts
src/webrender/: index.ts
src/webrender/core/: SyntaxHighlighter.ts  index.ts
src/webrender/gui/: EditorView.ts  TextRenderer.ts  index.ts
src/webrender/gui/themes/: moondark.ts
src/webrender/i18n/: context-menu.ts  index.ts
src/webrender/ipc/: chromeipc.ts  index.ts
